@@ -1,4 +1,4 @@
-.TH HDPARM 8 "October 2005" "Version 6.2"
+.TH HDPARM 8 "October 2005" "Version 6.3"
 
 .SH NAME
 hdparm \- get/set hard disk parameters
@@ -558,8 +558,9 @@ segfault it is often still possible to run two instances of hdparm
 consecutively and issue the two necessary commands that way.
 .SH AUTHOR
 .B hdparm
-has been written by Mark Lord <mlord@pobox.com>, the primary developer and
-maintainer of the (E)IDE driver for Linux, with suggestions from many netfolk.
+has been written by Mark Lord <mlord@pobox.com>, the original primary
+developer and maintainer of the (E)IDE driver for Linux,
+with suggestions from many netfolk.
 .PP
 The disable Seagate auto-powersaving code
 is courtesy of Tomi Leppikangas(tomilepp@paju.oulu.fi).
