@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	6.2
+Version:	6.3
 Entered-date:	2005-10-18
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v6.3 report ATA revisions > 7
 		v6.2 major rework of ATA Security Commands
 		v6.1 bug fix for BLKGETSIZE
 		v6.0 bug fix for BLKGETSIZE64; new ATA Security Commands
@@ -47,7 +48,7 @@ Keywords:	ide eide ata atapi performance kernel cd cdrom disk device driver
 Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		44K hdparm-6.2.tar.gz
+		44K hdparm-6.3.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
